// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordPage should render the PasswordPage 0 1`] = `
<div
  className="PasswordPage"
>
  <FormErrorsTop
    formErrors={Object {}}
  />
  <FormErrorsField
    field="all"
    formErrors={Object {}}
  />
  <section>
    <h1>
      Change your password 
      <Icon
        i="password"
        s="xxl"
      />
    </h1>
    <ol>
      <li>
        <strong>
          Enter your email
           
          <Icon
            i="email"
            s="m"
          />
        </strong>
      </li>
      <li>
        <span>
          Check your inbox
           
          <Icon
            i="inbox"
            s="m"
          />
        </span>
      </li>
      <li>
        <span>
          Change your password
           
          <Icon
            i="password"
            s="m"
          />
        </span>
      </li>
    </ol>
    <form
      action=""
      method="POST"
    >
      <input
        name="state"
        type="hidden"
        value="0"
      />
      <p>
        <label
          htmlFor="email"
        >
          Email
        </label>
        <input
          autoFocus={true}
          id="email"
          name="email"
          placeholder="example: unicorn@example.com"
          required={true}
          size="40"
          type="text"
        />
        <br />
        <small>
          We need your email to send the token.
        </small>
      </p>
      <FormErrorsField
        field="email"
        formErrors={Object {}}
      />
      <p>
        <button
          type="submit"
        >
          <Icon
            i="password"
            s="m"
          />
           Send Token
        </button>
      </p>
    </form>
  </section>
</div>
`;

exports[`PasswordPage should render the PasswordPage 1 1`] = `
<div
  className="PasswordPage"
>
  <FormErrorsTop
    formErrors={Object {}}
  />
  <FormErrorsField
    field="all"
    formErrors={Object {}}
  />
  <section>
    <h1>
      Change your password 
      <Icon
        i="password"
        s="xxl"
      />
    </h1>
    <ol>
      <li>
        <span>
          Enter your email
           
          <Icon
            i="email"
            s="m"
          />
        </span>
      </li>
      <li>
        <strong>
          Check your inbox
           
          <Icon
            i="inbox"
            s="m"
          />
        </strong>
      </li>
      <li>
        <span>
          Change your password
           
          <Icon
            i="password"
            s="m"
          />
        </span>
      </li>
    </ol>
    <p>
      Please check your email inbox.
    </p>
  </section>
</div>
`;

exports[`PasswordPage should render the PasswordPage 2 1`] = `
<div
  className="PasswordPage"
>
  <FormErrorsTop
    formErrors={Object {}}
  />
  <FormErrorsField
    field="all"
    formErrors={Object {}}
  />
  <section>
    <h1>
      Change your password 
      <Icon
        i="password"
        s="xxl"
      />
    </h1>
    <ol>
      <li>
        <span>
          Enter your email
           
          <Icon
            i="email"
            s="m"
          />
        </span>
      </li>
      <li>
        <span>
          Check your inbox
           
          <Icon
            i="inbox"
            s="m"
          />
        </span>
      </li>
      <li>
        <strong>
          Change your password
           
          <Icon
            i="password"
            s="m"
          />
        </strong>
      </li>
    </ol>
    <form
      action=""
      method="POST"
    >
      <input
        name="state"
        type="hidden"
        value="2"
      />
      <p>
        <label
          htmlFor="newPassword"
        >
          Password
        </label>
        <input
          autoFocus={true}
          id="newPassword"
          name="newPassword"
          pattern=".{8,}"
          required={true}
          size="40"
          type="password"
        />
      </p>
      <FormErrorsField
        field="newPassword"
        formErrors={Object {}}
      />
      <p>
        <button
          type="submit"
        >
          <Icon
            i="password"
            s="m"
          />
           Update Password
        </button>
      </p>
    </form>
  </section>
</div>
`;
